node-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: monitoring

spec:
  selector:
    matchLabels:
      app: node-exporter

  template:
    metadata:
      labels:
        app: node-exporter

    spec:
      tolerations:
      - operator: Exists   # 🔥 allows running on ALL nodes (even tainted ones)

      containers:
      - name: node-exporter
        image: prom/node-exporter:latest

        ports:
        - containerPort: 9100

        args:
        - "--path.rootfs=/host"

        volumeMounts:
        - name: root
          mountPath: /host
          readOnly: true

      volumes:
      - name: root
        hostPath:
          path: /
