network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-mysql
  namespace: ivolve

spec:
  podSelector:
    matchLabels:
      app: mysql   # target MySQL pods

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nodejs   #  allow ONLY nodejs pods

    ports:
    - protocol: TCP
      port: 3306   #  MySQL port
